# ros_tango

./: LICENSE  README.md  requirements.txt
src/robohop_ros/: CMakeLists.txt  package.xml
src/robohop_ros/config/: fast_sam_demo_parameters.yaml  fast_sam_service_parameters.yaml  fast_sam_service_tester_parameters.yaml  images_from_directory_parameters.yaml  monocular_depth_parameters.yaml  monocular_depth_service_parameters.yaml  monocular_depth_service_tester_parameters.yaml  monocular_metric_depth_parameters.yaml  monocular_metric_depth_service_parameters.yaml  robohop_multiple_video_creator_parameters.yaml  robohop_parameters.yaml  robohop_visuals_parameters.yaml
src/robohop_ros/launch/: fast_sam_service_tester.launch  fast_sam_services.launch  monocular_depth.launch  monocular_depth_service_tester.launch  monocular_depth_services.launch  monocular_metric_depth.launch  monocular_metric_depth_services.launch  play_images_from_directory.launch  robohop.launch  robohop_load_map_via_service.launch  robohop_multiple_video_creator.launch  robohop_rviz.launch  robohop_services.launch  robohop_visuals.launch
src/robohop_ros/msg/: FastSAMAndDepth.msg  FastSAMDepthGoal.msg  OdometryRollout.msg
src/robohop_ros/rviz/: fast_sam_service_tester.rviz  monocular_depth_service_tester.rviz  robohop.rviz
src/robohop_ros/scripts/: fast_sam_service.py  fast_sam_service_tester.py  monocular_depth.py  monocular_depth_service.py  monocular_depth_service_tester.py  monocular_metric_depth.py  monocular_metric_depth_service.py  play_images_from_directory.py  robohop.py  robohop_load_map_via_service.py  robohop_multiple_video_creator.py  robohop_visuals.py
src/robohop_ros/src/: __init__.py  (+5 more)
src/tango_ros/: CMakeLists.txt  package.xml
src/tango_ros/config/: goal_control_parameters.yaml
src/tango_ros/launch/: continuous_goal_controller.launch
src/tango_ros/scripts/: continuous_goal_controller.py
src/tango_ros/src/: __init__.py  goal_control.py  goal_generator_module.py  pid.py  rgb_leb_colours.py
(+14 files in other folders)
